@@ -1,3 +1,9 @@
+2008-02-28  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getNotifications): State reasons
+	are always a list.
+	(Connection_getJobAttributes): Likewise.
+
 2008-02-19  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.35.
